# darwin-ism

./: .gitignore  .swiftformat  .swiftlint.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Package.resolved  Package.swift  README-ja.md  README.md  build.rs  flake.nix  lefthook.yaml  lefthook.yml  mise.toml  renovate.json  rust-toolchain.toml  rustfmt.toml  treefmt.toml
.agents/docs/critical/: rules.md
.agents/docs/reference/: architecture.md  commands.md
.agents/docs/workflows/: release.md
.github/release-please/: config.json  manifest.json
.github/workflows/: build-check.yaml  ci.yaml  clippy.yaml  flake-check.yaml  format-check.yaml  github-actions-lint.yaml  publish.yaml  release-please.yaml  semantic-pr-title.yaml  status-check.yaml  swiftlint.yaml  update-fenix-sha256.yaml  update-swiftpm2nix.yaml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
.zed/: settings.json
Sources/darwin-ism/: CLI.swift  InputSource.swift  InputSourceManager.swift  main.swift
docs/adr/: 0001-adopt-adr.md  0002-migrate-to-rust.md  0003-tis-api-ffi-binding.md
nix/: darwin-ism.nix  swift.nix  swiftformat.nix  swiftlint.nix  swiftpm2nix.nix
nix/darwin-ism/: package.nix
nix/darwin-ism/nix/: workspace-state.json
scripts/: check-swift-version.sh  check-tool-versions.sh
src/: cli.rs  lib.rs  main.rs
text-input-source/: Cargo.toml  README-ja.md  README.md  build.rs
text-input-source/src/: ffi.rs  input_source.rs  lib.rs  tis_manager.rs
