[package]
name = "darwin-ism"
description = "macOS Input Source Manager CLI"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "darwin-ism"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
text-input-source = { path = "./text-input-source" }
thiserror.workspace = true

[build-dependencies]
chrono = "0.4.44"

[workspace]
resolver = "3"
members = ["text-input-source"]

[workspace.package]
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cffnpwr/darwin-ism"
repository = "https://github.com/cffnpwr/darwin-ism"

[workspace.dependencies]
thiserror = "2.0.18"
